--- a/style.css
+++ b/style.css
@@ -125,9 +125,16 @@ footer {
 
 .yetenekler{
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5); /* X-offset, Y-offset, blur radius, spread radius, color */
-  background-color: #ddd;
+  background-color: #272121;
   border-radius: 8px;
   text-align: center;
+  color: white;
+  font-size: 20px;
+  text-shadow: 2px 2px 1px rgba(135, 132, 132, 0.5); /* X-offset, Y-offset, blur radius, color */
+  transition: transform 0.3s ease;
+}
+.yetenekler:hover{
+    transform: scale(1.1); /* Kutuyu 1.1 kat büyüt */
 }
 img {
     width: 100%;
