--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -52,7 +53,7 @@ button{
     border-radius: 8px;
     background-color: #e16428; 
     color: white;
-    border: 0.2;
+    border: 0.02;
     padding-left: 5px;
     border-color: #272121;
 }
@@ -64,6 +65,14 @@ button{
     flex-grow: 1; /* Uzunluğunu tam olarak kapla */
 }
 
+.bol{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 sütun */
+    gap: 10px;
+}
+.kutu{
+    padding-bottom: 30px;
+}
 .personal {
     text-align: center;
     /* Diğer stillendirmeleri ekleyebilirsiniz */
