--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ button{
     padding-top: 6%;
     padding-left: 3%;
     padding-right: 3%;
+    font-size: 15px;
     width: 80%;
     max-width: 1000px;
     margin: 0 auto;
@@ -174,4 +175,43 @@ img {
     width: 100%;
     height: 100%;
     border-radius: 8px;
+}
+/* Add styles for the message form */
+.message-form {
+    margin-top: 30px;
+}
+
+.message-form h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.message-form form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.message-form textarea {
+    width: 100%;
+    max-width: 500px;
+    height: 150px;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.message-form button {
+    padding: 10px 20px;
+    background-color: #272121;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.message-form button:hover {
+    background-color: #e16428; 
 }
